syntax = "proto3";
package auth;

import "general.proto";
option go_package = "github.com/anton-uvarenko/cinema/authorization-service/protobufs/auth";

message SocialAuthPayload {
  string code = 1;
}

service SocialAuth {
  rpc GoogleAuth(SocialAuthPayload) returns (general.JwtResponse);
  rpc FacebookAuth(SocialAuthPayload) returns (general.JwtResponse);
}